# mc_GraspMoveBoxController

./: CMakeLists.txt  README.md  build_and_run
etc/: DemoController.in.yaml
src/: CMakeLists.txt  DemoController.cpp  DemoController.h  api.h  lib.cpp
src/modules/: CMakeLists.txt
src/modules/alias/: box_lid.in.yaml  box_no_lid.in.yaml  shelf.in.yaml
src/modules/meshes/shelf/: shelf.dae  shelf.stl
src/modules/rsdf/box_lid/: box_lid.rsdf
src/modules/rsdf/box_no_lid/: box_no_lid.rsdf
src/modules/urdf/: box_lid.in.urdf  box_no_lid.in.urdf  shelf.in.urdf
src/modules/xml/: box_lid.in.xml  box_lid.in.yaml  box_no_lid.in.xml  box_no_lid.in.yaml  shelf.in.xml  shelf.in.yaml
src/modules/yaml/: box_lid.in.yaml  box_no_lid.in.yaml  shelf.in.yaml
src/states/: CMakeLists.txt  DemoController_Initial.cpp  DropoffBox.cpp  DropoffBox.h  DropoffBox.hpp  GoTo.cpp  GoTo.h  GoTo.hpp  GoToBoxDropoffPose.cpp  GoToBoxDropoffPose.h  GoToBoxPickupPose.cpp  GoToBoxPickupPose.h  GraspLiftBox.cpp  GraspLiftBox.h  GraspMoveBox.cpp  GraspMoveBox.h  HoldBox.cpp  HoldBox.h  HoldBox.hpp  LookAtBox.cpp  LookAtBox.hpp  MoveHands.cpp  MoveHands.h  MoveHands.hpp  PickupBox.cpp  PickupBox.h  PickupBox.hpp  ShoulderOrientation.cpp  ShoulderOrientation.hpp  utils.h
